--- a/style.css
+++ b/style.css
@@ -4,12 +4,128 @@
     font-family: Roboto, Arial;
 }
 
+/* header */
+.header {
+    position: fixed;
+    /* border: 1px solid #ccc; */
+    top:0;
+    height: 55px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: white;
+    border-bottom: 1px solid #ccc;
+}
+
+.left-part {
+    display: flex;
+    align-items: center;
+}
+
+.middle-part {
+    display: flex;
+    flex: 1;
+    margin-left: 20%;
+    max-width: 600px;
+    /* height: 40px; */
+    align-items: center;
+}
+
+.right-part {
+    display: flex;
+    flex: 1;
+    gap: 20px;
+    justify-content: end;
+    align-items: center;
+    margin-right:20px;
+    /* border: 1px solid red; */
+}
+
+.hamb-menu {
+    height:42%;
+    margin-left:24px;
+    margin-right:24px;
+    cursor: pointer;
+}
+
+.youtube-logo {
+    height: 36%;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.search {
+    flex: 1;
+    height: 41px;
+    max-width: 1000px;
+    border: 1px solid rgb(206,206,206);
+    border-radius: 3px;
+    width: 0;
+    box-shadow: inset 1px 2px 5px rgba(0,0,0,0,05);
+}
+
+.search::placeholder {
+    font-family: Arial;
+    font-size: 16px;
+    padding: 20px;
+}
+
+.search-logo{
+    border: 1px solid #ccc;
+    background-color: rgb(247,247,247);
+    padding: 8px 20px;
+    height:25px;
+    margin-left: -1px;
+    cursor: pointer;
+}
+
+.voice-search {
+    height: 25px;
+    background-color: rgb(247,247,247);
+    border-radius: 50%;
+    margin-left: 8px;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.upload, .yt-apps, .notifications {
+    height: 25px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.my-profile {
+    height: 30px;
+    width: 30px;
+    object-fit: contain;
+    border-radius: 50%;
+    border:1px solid rgb(227,227,227);
+    cursor: pointer;
+}
+
+/* sidebar */
+.sidebar {
+    background-color: white;
+    left: 0;
+    bottom: 0;
+    top: 55px;
+    width: 70px;
+    position: fixed;
+}
+
+/* video container */
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 15px;
-    row-gap: 40px;
-    margin: 10px;
+    row-gap: 40px;   
+    padding-left: 92px;
+    padding-right: 30px;
+    padding-top: 80px;
+    padding-bottom: 40px;
+    background-color: rgb(247,247,247);
+    position: static;
 }
 
 .video-preview {
@@ -19,6 +135,7 @@
 .thumbnail {
     width: 100%;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .not-thumbnail {
@@ -30,6 +147,7 @@
 .pic {
     width: 38px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .video-title {
@@ -37,16 +155,19 @@
     font-size: 14px;
     color: rgb(0,0,0);
     line-height: 20px;
+    cursor: pointer;
 }
 
 .video-user {
     margin-top: 8px;
     font-size: 12px;
     color: rgb(96,96,96);
+    cursor: pointer;
 }
 
 .video-info {
     margin-top: 3px;
     font-size: 12px;
     color: rgb(96,96,96);
+    cursor: pointer;
 }
