--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 /* header */
 .header {
     position: fixed;
-    /* border: 1px solid #ccc; */
     top:0;
     height: 55px;
     width: 100%;
@@ -16,6 +15,7 @@
     justify-content: space-between;
     background-color: white;
     border-bottom: 1px solid #ccc;
+    z-index: 10;
 }
 
 .left-part {
@@ -27,9 +27,10 @@
     display: flex;
     flex: 1;
     margin-left: 20%;
-    max-width: 650px;
-    /* height: 40px; */
+    max-width: 1000px;
+    height: 55px;
     align-items: center;
+    justify-content: center;
 }
 
 .right-part {
@@ -39,7 +40,7 @@
     justify-content: end;
     align-items: center;
     margin-right:20px;
-    /* border: 1px solid red; */
+    width: 300px;
 }
 
 .hamb-menu {
@@ -57,7 +58,7 @@
 
 .search {
     flex: 1;
-    height: 41px;
+    height: 40px;
     max-width: 1000px;
     border: 1px solid rgb(206,206,206);
     border-radius: 3px;
@@ -74,10 +75,34 @@
 .search-logo{
     border: 1px solid #ccc;
     background-color: rgb(247,247,247);
-    padding: 8px 20px;
-    height:25px;
+    padding: 7px 20px;
+    height: 26px;
     margin-left: -1px;
     cursor: pointer;
+}
+
+.buttons-hover .tooltip {
+    position: absolute;
+    bottom: -40px;
+    background-color: grey;
+    color: white;
+    padding: 7px 8px;
+    font-size: 13px;
+    border-radius: 2px;
+    opacity: 0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+}
+
+.buttons-hover:hover .tooltip {
+    opacity: 1;
+}
+
+.buttons-hover {
+    display: flex;
+    justify-content: center;
+    position: relative;
 }
 
 .voice-search {
@@ -93,6 +118,22 @@
     height: 25px;
     margin-right: 10px;
     cursor: pointer;
+}
+
+.notif-container {
+    display: flex;
+    position: relative;
+}
+
+.notif-count {
+    position: absolute;
+    top: -2px;
+    right: 6px;
+    background-color: rgb(187, 24, 24);
+    color: white;
+    padding: 2px 5px;
+    font-size: 10px;
+    border-radius: 50%;
 }
 
 .my-profile {
@@ -112,6 +153,30 @@
     top: 55px;
     width: 72px;
     position: fixed;
+    z-index: 10;
+}
+
+.side-link {
+    height: 75px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.side-link:hover {
+    background-color: rgb(227, 227, 227);
+}
+
+.s-logo {
+    height: 23px;
+}
+
+.s-name {
+    font-size: 10px;
+    margin-top: 7px;
 }
 
 /* video container */
@@ -120,7 +185,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 15px;
     row-gap: 40px;   
-    padding-left: 92px;
+    padding-left: 95px;
     padding-right: 30px;
     padding-top: 80px;
     padding-bottom: 40px;
